Fix payment relationship to payment type
